--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "Gulpfile.js",
   "dependencies": {
     "gulp": "^3.9.1",
+    "gulp-changed": "^3.2.0",
     "gulp-imagemin": "^4.1.0",
+    "gulp-rename": "^1.2.2",
     "gulp-uglify": "^3.0.0",
     "imagemin-pngcrush": "^5.1.0"
   },
